RESOLVED - issue EHO-147: Firefox 3.5 layout issues http://www.ehour.nl/jira/browse/EHO-147
FF 3.0 didn't behave properly on the month overview panel

--- a/eHour-wicketweb/src/main/java/net/rrm/ehour/ui/timesheet/panel/css/overview.css
+++ b/eHour-wicketweb/src/main/java/net/rrm/ehour/ui/timesheet/panel/css/overview.css
@@ -205,7 +205,6 @@ div.MonthAggregateTable div.TotalRow
 
 .bookedHours
 {
-	overflow:	hidden;
 	margin: 0 0 2px 2px;
 	padding: 0;
 	font-size: 1.1em;	
@@ -215,5 +214,5 @@ div.MonthAggregateTable div.TotalRow
 {
 	font-weight: bold;
 	float: 	right;
-	margin: 0em 2px 0 0;
+	margin: 0 2px 0 0;
 }
